syntax = "proto3"; 
// replace namespace with your own
option csharp_namespace = "RandomCappuccino.Shared"; 
package SignService; 

service SignService { 
	rpc SignIn (SignRequest) returns (SignResponse); 
	rpc SignUp (SignRequest) returns (SignResponse); 
} 

message SignResponse { 
	bool succeed = 1;
	string token = 2; 
	repeated string messages = 3;
} 

message SignRequest { 
	string email = 1;
	string password = 2;
}
